gcc-11 (11-20201222-2) UNRELEASED; urgency=medium

  * GCC snapshot, taken from the trunk (20201224)
  * Build the gcn offload compiler based on amdgcn-tools (based on LLVM 9).

 -- Matthias Klose <doko@ubuntu.com>  Thu, 24 Dec 2020 08:47:36 +0100

gcc-11 (11-20201222-1) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20201222)
  * Fix installation of g++-mapper-server.
  * Apply proposed patch for PR bootstrap/98324. enable LTO builds again.
  * Disable LTO build on s390x, see PR 976846.

 -- Matthias Klose <doko@debian.org>  Tue, 22 Dec 2020 14:41:42 +0100

gcc-11 (11-20201216-2) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20201216)
  * Rely on the upstream GNU versioned symbols for libstdc++6.
  * Bump phobos soname for GCC 11.
  * Add an autopkg test for linking libphobos.
  * Build gnat again, without building libgnat_util.
  * Build the gcn offload compiler using LLVM 11, and work around the
    broken as in LLVM 11. See also LLVM Bug 48201 for this issue and
    https://reviews.llvm.org/D73999 for the patch causing the issue.
  * Remove hsa offload packaging bits.
  * For LTO builds, configure with --enable-link-serialization instead of
    --enable-link-mutex.
  * Package additional gnat files.
  * Update the gm2 packaging.
  * Add conflicts with binary packages built from gcc-10.
  * Build libhwasan (AArch64 only).
  * Don't strip the sanitizer libraries, these are only used for debugging.
    LP: #1894166.
  * Explicitly configure with --disable-cet when building for older releases.
  * Don't run the libgphobos-link test on powerpc architectures.
  * Install libstdc++6 gdb pretty printer files in /usr/share/gcc (unversioned).
  * Don't mark the libgcc-sN cross packages with XB-Important/Protected: yes.
  * Relax the libc-dev dependencies for kfreebsd.
  * Limit checking when configuring with --enable-checking=extra,rtl.
  * Apply proposed patch for PR bootstrap/95582.