@@ -2233,16 +2233,16 @@ ifeq ($(with_hppa64),yes)
 	rm -rf $(d)/$(PF)/share/info
 	rm -rf $(d)/$(PF)/share/man
 	rm -f $(d)/$(PF)/$(libdir)/libiberty.a
-	rm -f $(d)/$(PF)/bin/*{gcov,gcov-dump,gcov-tool,gccbug,gcc,lto-dump}
+	rm -f $(d)/$(PF)/bin/*{gcov,gcov-dump,gcov-tool,gccbug,lto-dump}
 
 	rm -rf $(d)/$(PF)/hppa64-linux-gnu/include
 	rm -rf $(d)/$(PF)/hppa64-linux-gnu/lib
 
 	-find $(d)/$(PF)
-	mkdir -p $(d)/$(PF)/hppa64-linux-gnu/$(versiondir)/include
-	mv $(d)/$(PF)/hppa64-linux-gnu/$(versiondir)/include-fixed/{limits,syslimits}.h \
-	  $(d)/$(PF)/hppa64-linux-gnu/$(versiondir)/include/.
-	rm -rf $(d)/$(PF)/$(libdir)/gcc/hppa64-linux-gnu/$(versiondir)/include-fixed
+	mkdir -p $(d)/$(PF)/lib/gcc/hppa64-linux-gnu/$(versiondir)/include
+	mv $(d)/$(PF)/lib/gcc/hppa64-linux-gnu/$(versiondir)/include-fixed/{limits,syslimits}.h \
+	  $(d)/$(PF)/lib/gcc/hppa64-linux-gnu/$(versiondir)/include/.
+	rm -rf $(d)/$(PF)/lib/gcc/hppa64-linux-gnu/$(versiondir)/include-fixed
 endif
 
 	: # Work around PR lto/41569
