@@ -2,6 +2,7 @@ gcc-11 (11-20201222-2) UNRELEASED; urgency=medium
 
   * GCC snapshot, taken from the trunk (20201224)
   * Build the gcn offload compiler based on amdgcn-tools (based on LLVM 9).
+  * Fix hppa64 snapshot builds.
 
  -- Matthias Klose <doko@ubuntu.com>  Thu, 24 Dec 2020 08:47:36 +0100
 
